# synesthesia

./: CLAUDE.md  README.md  api_proxy.py  build_wasm.py  gliner_chat_spec.md  pyproject.toml  run_server.py  setup.sh
synesthesia/: __init__.py  mood_analyzer.py
synesthesia/static/: index.html  pyodide_config.json  test.html
synesthesia/static/css/: styles.css
synesthesia/static/js/: app.js
synesthesia/static/py/: mood_analyzer.py
