[project]
name = "synesthesia"
version = "0.1.0"
description = "GLiNER Mood Chat Client - Real-time emotional analysis visualization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gliner>=0.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "pyodide-build>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[build-system]
requires = ["hatchling", "pyodide-build>=0.25.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.hatch.build]
include = [
    "synesthesia/**/*.py",
    "synesthesia/static/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["synesthesia"]